Last fix for scrollbars

--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -13,8 +13,8 @@ figure.highlight {
   line-height: 1.8;
   border-radius: $border-radius;
   -webkit-scrollbar { width: 8px; height: 3px;}
-  -webkit-scrollbar-track {  background-color: #000;}
-  -webkit-scrollbar-track-piece { background-color: #111;}
+  -webkit-scrollbar-track {  background-color: #282828;}
+  -webkit-scrollbar-track-piece { background-color: #5f6060;}
   > pre,
   pre.highlight {
     margin: 0;
